--- a/AugmentisTrip/Info.plist
+++ b/AugmentisTrip/Info.plist
@@ -46,5 +46,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allow for select photo from library</string>
 </dict>
 </plist>
